# MSVCBuildICU

./: CMakeLists.txt  MIDASAPI.cmake  README.md
